packages/components/src/components/List/components/ListItemView/ListItemView.module.scss
@use "@/styles/mixins/containerBreakpointSizes";

.view {
  display: flex;
  flex-direction: column;

  .checkboxContainer {
    display: flex;
    align-items: center;
    flex-shrink: 0;

    &:empty {
      display: none;
    }
  }

  .content {
    min-width: 0;
    display: flex;
    gap: var(--list-item--spacing);
    flex-grow: 1;
    flex-wrap: wrap;
  }

  .topContent {
    overflow-wrap: anywhere;
    display: flex;
  }

  .bottomContent {
    width: 100%;
    overflow-wrap: break-word;
    display: flex;
    flex-direction: column;
  }

  .heading {
    color: var(--text--color--default);
  }

  .header {
    overflow-wrap: break-word;
    display: flex;
    gap: var(--list-item--avatar-to-title-spacing);
    max-width: 100%;
  }

  .subTitle {
    font-size: var(--list-item--subtitle-font-size);

    .text:not(:last-child)::after {
      content: "–";
      display: inline-block;
      margin: 0 var(--size-rem--s);
    }
  }

  .badge {
    max-width: 100%;
  }

  &.listView {
    padding: var(--list-item--padding);
    gap: var(--list-item--spacing);

    .columnLayout {
      flex-grow: 1;

      > div {
        flex-grow: 1;
        align-items: center;
      }
    }

    .contentWrapper {
      display: flex;
      gap: var(--list-item--spacing);
      justify-content: space-between;
      flex-grow: 1;
      align-items: flex-start;
    }

    .content {
      align-items: center;
      align-self: center;
      max-width: 100%;
    }

    .title {
      max-width: 100%;
      min-width: 0;
    }

    .action {
      margin-left: auto;

      button {
        margin-right: 0;
      }
    }

    .header {
      order: 0;
      flex-grow: 1;
      align-items: center;

      &:empty,
      .subTitle:empty {
        display: none;
      }

      .avatar,
      .checkboxContainer {
        align-self: start;
      }

      .checkboxContainer {
        height: var(--avatar--size--m);
      }
    }

    &:has(.subTitle:not(:empty)) {
      .action,
      .avatar,
      .checkboxContainer {
        margin-top: var(--size-px--xxs);
      }
    }

    .topContent {
      order: 1;
    }

    :global(.flow--heading--heading-content) {
      max-width: 100%;
    }
  }

  &.tileView {
    gap: var(--list-item--padding);
    border-color: var(--list-item--border-color);
    border-width: var(--list-item--border-width);
    border-style: var(--list-item--border-style);
    border-radius: var(--list-item--corner-radius);
    align-content: flex-start;
    height: 100%;
    position: relative;
    overflow: hidden;

    .content {
      flex-direction: column;
      justify-content: flex-start;
      align-items: flex-start;
      padding-inline: var(--list-item--padding);
      padding-bottom: var(--list-item--padding);
      width: 100%;
    }

    .avatarContainer {
      width: 100%;
      border-bottom: var(--list-item--border-width)
        var(--list-item--border-style) var(--list-item--border-color);
      aspect-ratio: 16 / 9;

      img {
        overflow-clip-margin: unset;
        aspect-ratio: 16 / 9;
      }
    }

    .avatar {
      width: 100%;
      height: 100%;
      border-radius: 0;

      :global(.flow--avatar--icon) {
        width: var(--size-px--xxl);
        height: var(--size-px--xxl);
      }

      :global(.flow--avatar--initials) {
        font-size: var(--size-px--xxl);
      }
    }

    .checkboxContainer {
      height: 100%;
      max-height: var(--avatar--size--m);
    }

    .title {
      width: 100%;

      :global(.flow--heading--heading-content) {
        position: absolute;
        top: var(--list-item--padding);
        left: var(--list-item--padding);
        right: var(--list-item--padding);
      }
    }

    .topContent,
    .header {
      width: 100%;
    }

    .action {
      align-self: start;
    }

    .bottomContent {
      margin-top: auto;
    }
  }
}

